# laser-raytracer

./: .gitmodules  CMakeLists.txt  README.md
data/: ndyag_absorption_spectrum.csv  reference_reflector.csv  reference_reflector.txt  solar_spectrum.csv
include/: allmath.h  argparser.h  crystal.h  csv.h  debugutils.h  funcan.h  functionbuilder.h  functionutils.h  grid.h  iterateshapes.h  lens.h  log.h  math.h  metaprog.h  mirror.h  nomadbinding.h  nomadbinding3.h  object.h  optimization.h  physics.h  random.h  ray.h  sampler.h  scene.h  shape.h  timer.h  trace.h  vecn.h  vtk.h
lib/nomad3/: CONTRIBUTORS  Makefile  README.txt
paper/: bachelorarbeit.tex  lsspub.sty  masterarbeit.lof  masterarbeit.lot  masterarbeit.tex
paper/bibliographies/: references.bib
paper/images/: aabb_intersect.pdf_tex  gps.pdf_tex  line_intersect.pdf_tex  mads.pdf_tex  pareto_front.pdf_tex
presentation/: presentation.tex  references.bib
presentation-end/: Makefile  presentation.tex
presentation-end/images/: dominance_zones.pdf_tex  setup.pdf_tex
presentation-end/themefau/: beamerouterthemefau.sty  beamerthemefau-nat.sty  beamerthemefau-phil.sty  beamerthemefau-rw-wiso.sty  beamerthemefau-tf.sty  beamerthemefau.sty
presentation/themefau/: beamercolorthemefau.sty  beamerfontthemefau.sty  beamerinnerthemefau.sty  beamerthemefau-med.sty  beamerthemefau-rw-jura.sty  beamerthemefau-rw.sty
references/optimization/: blackbox-descent
references/sampling/: uniform-n-sphere.link
results/: reference_reflector.txt  solarlaser_adjusted.xml
results/fixed_rand_start/: crystal.AABB.vtk  crystal.vtk  mirror.AABB.vtk  mirror.vtk  rays_0.vtk  rays_1.vtk  rays_2.vtk  rays_3.vtk  rays_4.vtk  rays_5.vtk  rays_composition.vtk  reflector.txt
results/open_pipe_start/: crystal.vtk  mirror.AABB.vtk  mirror.vtk  rays_0.vtk  rays_1.vtk  rays_2.vtk  rays_composition.vtk  reflector.txt
results/open_rand_start/: crystal.AABB.vtk  crystal.vtk  lens.AABB.vtk  mirror.AABB.vtk  mirror.vtk  rays_0.vtk  rays_1.vtk  rays_2.vtk  rays_3.vtk  rays_4.vtk  rays_5.vtk  rays_composition.vtk  reflector.txt
scripts/: plot.plt
src/: crystal.cpp  csv.cpp  debugutils.cpp  experiment.cpp  functionutils.cpp  grid.cpp  lens.cpp  log.cpp  main.cpp  mirror.cpp  object.cpp  optimization.cpp  physics.cpp  plots.cpp  random.cpp  ray.cpp  scene.cpp  shape.cpp  trace.cpp  vtk.cpp
src/math/: allmath.h  funcan.h  physics.cpp  physics.h  sampler.h
src/optimization/: nomadbinding.h  optimization.h
src/tracing/: grid.cpp  grid.h  lens.cpp  lens.h  medium.cpp  medium.h  mirror.cpp  mirror.h  object.cpp  object.h  ray.cpp  ray.h  scene.cpp  scene.h  shape.cpp  shape.h  thinlens.cpp  thinlens.h
src/types/: vecn.h
src/utils/: argparser.h  csv.cpp  csv.h  debugutils.cpp  debugutils.h  (+6 more)
(+207 files in other folders)
